# grok-hypothesis-engine

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  getting-started.md  pyproject.toml
src/hypothesis_engine/: __init__.py  __main__.py  cli.py  config.py  llm.py  models.py  prompts.py  workflow.py
tests/: test_models.py  test_safety_cli.py  test_workflow_dry_run.py
