[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dagztagz-hypothesis-engine"
version = "0.2.0"
description = "DagzTagz Hypothesis Engine — generate, multi-check verify, and suggest richer tests for scientific hypotheses (Phase 2, iterative). Powered by Grok (xAI)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
  { name = "DagzTagz" },
]
keywords = ["science", "hypothesis", "dagztagz", "xai", "grok", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "openai>=1.60.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "rich>=13.9.0",
]

[project.optional-dependencies]
audit = [
  "cryptography>=43.0.0",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.9.0",
  "cryptography>=43.0.0",
]

[project.scripts]
hypothesis-engine = "hypothesis_engine.cli:main"

[project.urls]
Homepage = "https://github.com/DagzTagz/dagztagz-hypothesis-engine"
Repository = "https://github.com/DagzTagz/dagztagz-hypothesis-engine"
Issues = "https://github.com/DagzTagz/dagztagz-hypothesis-engine/issues"
Security = "https://github.com/DagzTagz/dagztagz-hypothesis-engine/blob/main/SECURITY.md"

[tool.hatch.build.targets.wheel]
packages = ["src/hypothesis_engine"]

# Map src/ layout so the import name is `hypothesis_engine`, not `src.hypothesis_engine`
[tool.hatch.build.targets.wheel.sources]
"src/hypothesis_engine" = "hypothesis_engine"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/LICENSE",
  "/SECURITY.md",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/getting-started.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
